# capstone-project

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
app/: _helpers.py  streamlit_app.py
data/: external_events.json  lane_history.json
docs/: 01-problem-framing.md  02-phase2-basic-agent.md  03-phase3-tools-and-memory.md  04-phase4-rag.md  05-phase5-safety-and-eval.md  06-phase6-long-term-memory.md  07-phase7-adaptive-personas.md  08-phase8-deploy-and-monitor.md  09-phase9-evaluation-and-reports.md  DEMO_SCRIPT.md  EVALUATION_REPORT.md  PROBLEM_FRAMING.md  REFLECTION_REPORT.md  architecture.md  communication.md  end-end-flows.md  phase2-at1-sample-run.txt  phase3-at3-multiturn-trace.txt  phase4-comparison-raw.json  phase4-comparison.md  phase5-acceptance-results.json  phase5-acceptance-results.md  phase6-cross-session-trace.txt  phase7-persona-compare.json  phase7-persona-compare.md  phase9-latency-profile.json  phase9-latency-profile.md  phase9-llm-judge-results.json  phase9-llm-judge-results.md  phase9-multi-seed-results.json  phase9-multi-seed-results.md  phase9-ragas-results.json  phase9-ragas-results.md  project-overview.md  repo-guide.md  tech-stack.md
eval/: acceptance_tests.yaml  adversarial_probes.yaml  capture_screenshots.py  compare_with_without_rag.py  profile_latency.py  run_acceptance_tests.py  run_at3_multiturn.py  run_cross_session_demo.py  run_llm_judge.py  run_multi_seed.py  run_persona_compare.py  run_ragas.py
tests/: test_carrier_history.py  test_external_events.py  (+10 more)
(+38 files in other folders)
